--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_grapgh">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/homeFragment">
 
+
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.notesapp.ui.Fragment.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+      <action
+        android:id="@+id/action_homeFragment_to_createNote"
+        app:destination="@id/createNote" />
+      <action
+        android:id="@+id/action_homeFragment_to_editNote"
+        app:destination="@id/editNote" />
+      </fragment>
+
+    <fragment
+        android:id="@+id/createNote"
+        android:name="com.example.notesapp.ui.Fragment.CreateNote"
+        android:label="Create notes"
+        tools:layout="@layout/fragment_create_note" >
+        <action
+            android:id="@+id/action_createNote_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editNote"
+        android:name="com.example.notesapp.ui.Fragment.EditNote"
+        android:label="Edit notes"
+        tools:layout="@layout/fragment_edit_note" >
+        <action
+            android:id="@+id/action_editNote_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <argument
+            android:name="data"
+            app:argType="com.example.notesapp.Models.Notes" />
+    </fragment>
 </navigation>
