--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#D84315</color>
+    <color name="sky">#C7EEF5</color>
+    <color name="skyblue">#8fd6e0</color>
+    <color name="redYellow">#AF5F46</color>
+    <color name="dark">#0A2747</color>
+    <color name="darkfade">#748496</color>
+    <color name="green">#38933D</color>
+    <color name="yellow">#B9B847</color>
+    <color name="orange">#EF6C00</color>
 </resources>
