--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -90,7 +90,7 @@
         android:id="@+id/btnCreateNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/red"
+        android:backgroundTint="@color/white"
         android:layout_gravity="bottom|right"
         android:src="@drawable/save"
         android:layout_marginRight="20dp"
