--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -86,7 +86,7 @@
         android:id="@+id/btnEditNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/red"
+        android:backgroundTint="@color/white"
         android:layout_gravity="bottom|right"
         android:src="@drawable/save"
         android:layout_marginRight="20dp"
