--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,7 @@
                 android:paddingEnd="25dp"
                 android:paddingBottom="8dp"
                 android:text="Medium"
-                android:textColor="@color/yellow"
+                android:textColor="@color/purple_500"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -92,7 +92,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/plus"
-            app:backgroundTint="@color/red"
+            app:backgroundTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
